--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "react/react-in-jsx-scope": "off",
     "linebreak-style": 0,
     "object-curly-newline": ["error", { "ImportDeclaration": "never" }],
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-plusplus": [2, { "allowForLoopAfterthoughts": true }]
   }
 }
