--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "cra-bundle-analyzer": "^0.1.1",
     "craco-esbuild": "^0.5.0",
     "esbuild-loader": "^2.18.0",
     "eslint": "^8.8.0",
@@ -65,6 +66,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest-mock": "^27.4.6",
     "jest-watch-typeahead": "^0.6.5",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
