--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "react-scripts start",
+    "craco:start": "craco start",
+    "build": "react-scripts build",
+    "craco:build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
