--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://gitname.github.io/frontend-school-hw2n3",
   "name": "frontend-school-hw2n3",
   "version": "0.1.0",
   "private": true,
@@ -22,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "craco:start": "craco start",
     "build": "react-scripts build",
@@ -66,6 +69,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3",
     "jest-mock": "^27.4.6",
     "jest-watch-typeahead": "^0.6.5",
     "prettier": "^2.5.1",
